# docufix

./: .editorconfig  .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: lint-and-fmt.yml  release.yml  unit-test.yml
docs/: conf.py  index.rst
docs/config/: autodoc.py  basic.py  i18n.py  myst.py  napoleon.py
docufix/: __init__.py  __main__.py  _abc.py  cli.py  core.py
docufix/rules/: __init__.py  _abc.py  ensure_final_newline.py  insert_whitespace_between_cn_and_en_char.py  replace_tab_with_space.py  trim_trailing_blank_lines.py  trim_trailing_whitespace.py  unify_newline.py
docufix/utils/: __init__.py  colorful.py  line_trimer.py  newline.py
src/docufix/: __main__.py  core.py
src/docufix/rules/: __init__.py  ensure_final_newline.py  insert_whitespace_between_cn_and_en_char.py  replace_tab_with_space.py  trim_trailing_blank_lines.py  trim_trailing_whitespace.py  unify_newline.py
src/docufix/utils/: __init__.py  colorful.py  newline.py
tests/: test_docufix.py  test_simple_doc_style_fixer.py  test_simple_rst_style_fixer.py
tests/test_rules/: test_insert_whitespace_between_cn_and_en_char.py  test_replace_tab_with_space.py
