[tool.poetry]
name = "docufix"
version = "0.3.0"
description = ""
authors = ["Nyakku Shigure <sigure.qaq@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.1"
pytest-parallel = "^0.1.1"
isort = "^5.10.1"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"
sphinx-intl = "^2.0.1"
toml = "^0.10.2"

[tool.poetry.scripts]
docufix = "docufix.__main__:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
