[tool.poetry]
name = "docufix"
version = "0.3.2"
description = ""
authors = ["Nyakku Shigure <sigure.qaq@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = { version = "^4.3.0", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
isort = "^5.13.2"
pytest-rerunfailures = "^14.0"
tomli = { version = "^2.0.1", python = "<3.11" }

[tool.poetry.scripts]
docufix = "docufix.__main__:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
add_imports = ["from __future__ import annotations"]
skip = ["setup.py", ".venv", "docs"]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
